--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord-interactions": "^3.4.0",
     "discord.js": "^14.13.0",
-    "fastify": "^4.22.0"
+    "fastify": "^4.22.0",
+    "fastify-raw-body": "^4.2.2"
   }
 }
