--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@dice-roller/rpg-dice-roller": "^5.0.0",
+    "@google-cloud/firestore": "^6.7.0",
     "discord-interactions": "^3.4.0",
     "discord.js": "^14.13.0",
     "fastify": "^4.22.0",
