--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "votekey-bot",
   "scripts": {
-    "start": "node index.js"
+    "start": "node scripts/index.js"
   },
   "dependencies": {
     "@dice-roller/rpg-dice-roller": "^5.0.0",
