fix: Better handling of deferred response
Cloud Run basically cannot run after it respond
It invokes itself to make another request which extends its own life

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DISCORD_BOT_TOKEN="<bot token>"
 DISCORD_APPLICATION_ID="<application id>"
 DISCORD_PUBLIC_KEY="<public key>"
+SERVICE_URL="<url of this service>"
